--- a/documentation/modules/configuring/proc-scheduling-based-on-other-pods.adoc
+++ b/documentation/modules/configuring/proc-scheduling-based-on-other-pods.adoc
@@ -13,7 +13,7 @@ Configure `podAntiAffinity` so that these workloads are scheduled on separate no
 
 This procedure provides configuration examples for the cluster-wide `Kafka` resource and the pool-specific `KafkaNodePool` resource.
 
-NOTE: If you configure `KafkaNodePool.spec.template`, its settings replace `Kafka.spec.kafka.template` for that node pool.
+NOTE: If a property is defined in both `KafkaNodePool.spec.template` and `Kafka.spec.kafka.template`, the property defined in the node pool is used.
 Properties are not merged. 
 For more information, see xref:affinity-{context}[Scheduling strategies].
 
