--- a/documentation/modules/configuring/proc-scheduling-deployment-to-node-using-node-affinity.adoc
+++ b/documentation/modules/configuring/proc-scheduling-deployment-to-node-using-node-affinity.adoc
@@ -13,7 +13,7 @@ To optimize performance and resource usage, configure `nodeAffinity` so that Kaf
 
 This procedure provides configuration examples for the cluster-wide `Kafka` resource and the pool-specific `KafkaNodePool` resource.
 
-NOTE: If you configure `KafkaNodePool.spec.template`, its settings replace `Kafka.spec.kafka.template` for that node pool.
+NOTE: If a property is defined in both `KafkaNodePool.spec.template` and `Kafka.spec.kafka.template`, the property defined in the node pool is used.
 Properties are not merged. 
 For more information, see xref:affinity-{context}[Scheduling strategies].
 
