--- a/documentation/modules/configuring/ref-affinity.adoc
+++ b/documentation/modules/configuring/ref-affinity.adoc
@@ -46,10 +46,8 @@ Use this to set a cluster-wide default scheduling policy for all Kafka broker an
 * `KafkaNodePool.spec.template.pod` + 
 For more granular control, if needed, you can override the default policy for specific node pools using the `KafkaNodePool` resource.
 
-IMPORTANT: If any property is defined under `KafkaNodePool.spec.template`, *all* `Kafka.spec.kafka.template` settings are ignored for pods in that node pool. 
-Properties are not merged. 
-In other words, node pools using `KafkaNodePool.spec.template` settings do not inherit any settings from the cluster-wide template. 
-Every required setting must be specified in the pool’s template.
+IMPORTANT: If a property is defined in both `KafkaNodePool.spec.template` and `Kafka.spec.kafka.template`, the property defined in the node pool is used.
+For example, node pools that use `KafkaNodePool.spec.template.pod` settings do not inherit pod settings from the cluster-wide template.
 
 Other Strimzi components have their own template properties for scheduling:
 
