--- a/documentation/assemblies/upgrading/assembly-upgrade.adoc
+++ b/documentation/assemblies/upgrading/assembly-upgrade.adoc
@@ -16,9 +16,13 @@ For example, if you used the Strimzi installation files, modify those files to p
 After you have upgraded your Cluster Operator to {ProductVersion}, the next step is to upgrade all Kafka nodes to the latest supported version of Kafka. 
 Kafka upgrades are performed by the Cluster Operator through rolling updates of the Kafka nodes.
 
-If you encounter any issues with the new version, Strimzi can be xref:assembly-downgrade-{context}[downgraded] to the previous version.
+IMPORTANT: When upgrading to Strimzi version 0.49 or later, convert all custom resources and CRDs to the `v1` API.  
+The `v1beta2` API is deprecated and will be removed in a future release.  
+Conversion must be performed after upgrading the Cluster Operator, so that the Cluster Operator can interpret the resources.  
+Custom resources can be updated before or after the Kafka upgrade.  
+For more information, see xref:assembly-api-conversion-{context}[Converting Strimzi custom resources to the `v1` API].
 
-.Upgrade without downtime
+If you encounter any issues with the new version, Strimzi can be xref:assembly-downgrade-{context}[downgraded] to the previous version.
 
 For topics configured with high availability (replication factor of at least 3 and evenly distributed partitions), the upgrade process should not cause any downtime for consumers and producers.
 
