Remove default Pod anti-affinity rules when rack awareness is enabled - Closes #11509
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/documentation/assemblies/configuring/assembly-scheduling.adoc
+++ b/documentation/assemblies/configuring/assembly-scheduling.adoc
@@ -19,6 +19,8 @@ include::../../modules/configuring/ref-affinity.adoc[leveloffset=+1]
 
 include::../../modules/configuring/proc-scheduling-brokers-on-different-worker-nodes.adoc[leveloffset=+1]
 
+include::../../modules/configuring/proc-distributing-brokers-across-zones.adoc[leveloffset=+1]
+
 include::../../modules/configuring/proc-scheduling-based-on-other-pods.adoc[leveloffset=+1]
 
 include::../../modules/configuring/proc-scheduling-deployment-to-node-using-node-affinity.adoc[leveloffset=+1]
