--- a/documentation/api/io.strimzi.api.kafka.model.common.Rack.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.common.Rack.adoc
@@ -38,8 +38,8 @@ NOTE: The _rack_ in which brokers are running can change in some cases when the 
 As a result, the replicas running in different racks might then share the same rack.
 Use Cruise Control and the `KafkaRebalance` resource with the `RackAwareGoal` to make sure that replicas remain distributed across different racks.
 
-When rack awareness is enabled in the `Kafka` custom resource, Strimzi will automatically add the Kubernetes `preferredDuringSchedulingIgnoredDuringExecution` affinity rule to distribute the Kafka brokers across the different racks.
-However, the _preferred_ rule does not guarantee that the brokers will be spread.
+When rack awareness is enabled, Strimzi will automatically add a node affinity rule to make sure the Kafka nodes are scheduled on one Kubernetes workers with the `topologyKey` label present.
+It will not add any rules for distributing the Kafka nodes across the racks or zones.
 Depending on your exact Kubernetes and Kafka configurations, you should add additional `affinity` rules or configure `topologySpreadConstraints` for Kafka to make sure the nodes are properly distributed across as many racks as possible.
 For more information see link:{BookURLDeploying}#assembly-scheduling-str[Configuring pod scheduling^].
 
