Update API Version in docs to `v1`
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/documentation/modules/configuring/proc-dedicated-nodes.adoc
+++ b/documentation/modules/configuring/proc-dedicated-nodes.adoc
@@ -51,7 +51,7 @@ This example applies a rule to a `Kafka` resource that assigns all its broker po
 .Example cluster-wide affinity configuration for dedicated nodes
 [source,yaml,subs=attributes+]
 ----
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: {KafkaApiVersion}
 kind: Kafka
 metadata:
   name: my-cluster
