--- a/documentation/modules/configuring/con-external-config.adoc
+++ b/documentation/modules/configuring/con-external-config.adoc
@@ -13,7 +13,7 @@ You can enable one or more configuration providers using the `config.providers` 
 .Example configuration to enable a configuration provider
 [source,yaml,subs="attributes+"]
 ----
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: {KafkaConnectApiVersion}
 kind: KafkaConnect
 metadata:
   name: my-connect
