--- a/documentation/modules/configuring/proc-changing-topic-replicas.adoc
+++ b/documentation/modules/configuring/proc-changing-topic-replicas.adoc
@@ -137,9 +137,9 @@ my-topic  Partition: 2  Leader: 3  Replicas: 2,3,4 Isr: 2,3,4
 
 . Finally, edit the `KafkaTopic` custom resource to change `.spec.replicas` to 3, and then wait the reconciliation.
 +
-[source,shell,subs=+quotes]
+[source,shell,subs=+attributes]
 ----
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: {KafkaTopicApiVersion}
 kind: KafkaTopic
 metadata:
   name: my-topic
