--- a/documentation/overview/overview.adoc
+++ b/documentation/overview/overview.adoc
@@ -20,9 +20,9 @@ include::assemblies/overview/assembly-kafka-concepts.adoc[leveloffset=+1]
 include::assemblies/overview/assembly-kafka-connect-components.adoc[leveloffset=+1]
 //MirrorMaker replication modes
 include::modules/overview/con-overview-mirrormaker2.adoc[leveloffset=+1]
-//description of kafka bridge
-include::modules/overview/con-overview-components-kafka-bridge.adoc[leveloffset=+1]
-include::modules/overview/con-overview-components-kafka-bridge-clients.adoc[leveloffset=+2]
+//description of HTTP bridge
+include::modules/overview/con-overview-components-http-bridge.adoc[leveloffset=+1]
+include::modules/overview/con-overview-components-http-bridge-clients.adoc[leveloffset=+2]
 //Main configuration points
 include::modules/overview/con-configuration-points.adoc[leveloffset=+1]
 //security options
