--- a/documentation/modules/upgrading/ref-preparing-for-conversion.adoc
+++ b/documentation/modules/upgrading/ref-preparing-for-conversion.adoc
@@ -4,12 +4,21 @@
 = Preparing for conversion
 
 [role="_abstract"]
-Before running the Strimzi API conversion tool, confirm that the environment meets the prerequisites for converting Strimzi custom resources and CRDs to the `v1` API.
+Before running the Strimzi API conversion tool, confirm that your environment meets the following prerequisites.
 
-Before running the Strimzi API conversion tool, verify that the following conditions are met:
+== General prerequisites
 
-* The deployed Strimzi version is 0.49 or later.  
-* All Strimzi custom resources and CRDs are backed up.
-* The namespaces that contain Strimzi resources to be converted are identified.  
-* The user or service account running the tool has RBAC permissions to list, get, and replace Strimzi custom resources.  
-* Any deprecated or unsupported fields in the `v1` API are reviewed, and manual changes are planned as needed.  
+Applies to all conversion commands (`convert-file`, `convert-resource`, `crd-upgrade`):
+
+* All Strimzi custom resources are backed up.
+* You have reviewed any manual changes required for deprecated or unsupported `v1` API fields.
+
+== Cluster conversion prerequisites
+
+Applies only when running the tool against a Kubernetes cluster (`convert-resource`, `crd-upgrade`):
+
+* The deployed Strimzi Cluster Operator version is 0.49.0 or later.
+* You have identified the namespaces containing Strimzi resources to convert.
+* The user or service account running the tool has the required RBAC permissions:
+** For `convert-resource`: `list`, `get`, and `replace` permissions for all Strimzi custom resources.
+** For `crd-upgrade`: `patch` permissions for Custom Resource Definitions.
