--- a/documentation/modules/configuring/con-config-http-bridge.adoc
+++ b/documentation/modules/configuring/con-config-http-bridge.adoc
@@ -4,17 +4,17 @@
 //
 // assembly-config.adoc
 
-[id='con-config-kafka-bridge-{context}']
-= Configuring the Kafka Bridge
+[id='con-config-http-bridge-{context}']
+= Configuring the HTTP Bridge
 
 [role="_abstract"]
-Update the `spec` properties of the `KafkaBridge` custom resource to configure your Kafka Bridge deployment.
+Update the `spec` properties of the `KafkaBridge` custom resource to configure your HTTP Bridge deployment.
 
-In order to prevent issues arising when client consumer requests are processed by different Kafka Bridge instances, address-based routing must be employed to ensure that requests are routed to the right Kafka Bridge instance.
-Additionally, each independent Kafka Bridge instance must have a replica.
-A Kafka Bridge instance has its own state which is not shared with another instances.
+In order to prevent issues arising when client consumer requests are processed by different HTTP Bridge instances, address-based routing must be employed to ensure that requests are routed to the right Kafka Bridge instance.
+Additionally, each independent HTTP Bridge instance must have a replica.
+A HTTP Bridge instance has its own state which is not shared with another instances.
 
-For a deeper understanding of the Kafka Bridge and its cluster configuration options, refer to the link:{BookURLBridge}[Using the Kafka Bridge^] guide and the link:{BookURLConfiguring}[Strimzi Custom Resource API Reference^].
+For a deeper understanding of the HTTP Bridge and its cluster configuration options, refer to the link:{BookURLBridge}[Using the Kafka Bridge^] guide and the link:{BookURLConfiguring}[Strimzi Custom Resource API Reference^].
 
 .Example `KafkaBridge` custom resource configuration
 [source,yaml,subs="+quotes,attributes"]
@@ -125,13 +125,13 @@ spec:
 <4> CORS access specifying selected resources and access methods. Additional HTTP headers in requests describe the origins that are permitted access to the Kafka cluster.
 <5> Requests for reservation of supported resources, currently `cpu` and `memory`, and limits to specify the maximum resources that can be consumed.
 <6> TLS configuration for encrypted connections to the Kafka cluster, with trusted certificates stored in X.509 format within the specified secrets.
-<7> Authentication for the Kafka Bridge cluster, specified as `tls`, `scram-sha-256`, `scram-sha-512`, `plain`, or `oauth`.
-By default, the Kafka Bridge connects to Kafka brokers without authentication.
+<7> Authentication for the HTTP Bridge cluster, specified as `tls`, `scram-sha-256`, `scram-sha-512`, `plain`, or `oauth`.
+By default, the HTTP Bridge connects to Kafka brokers without authentication.
 For details on configuring authentication, see the link:{BookURLConfiguring}#type-KafkaBridgeSpec-schema-reference[`KafkaBridgeSpec` schema properties^]
 <8> Consumer configuration options.
 <9> Producer configuration options.
-<10> Kafka Bridge loggers and log levels added directly (`inline`) or indirectly (`external`) through a `ConfigMap`. Custom Log4j configuration must be placed under the `log4j2.properties` key in the `ConfigMap`. You can set log levels to `INFO`, `ERROR`, `WARN`, `TRACE`, `DEBUG`, `FATAL` or `OFF`.
-<11> JVM configuration options to optimize performance for the Virtual Machine (VM) running the Kafka Bridge.
+<10> HTTP Bridge loggers and log levels added directly (`inline`) or indirectly (`external`) through a `ConfigMap`. Custom Log4j configuration must be placed under the `log4j2.properties` key in the `ConfigMap`. You can set log levels to `INFO`, `ERROR`, `WARN`, `TRACE`, `DEBUG`, `FATAL` or `OFF`.
+<11> JVM configuration options to optimize performance for the Virtual Machine (VM) running the HTTP Bridge.
 <12> Healthchecks to know when to restart a container (liveness) and when a container can accept traffic (readiness).
 <13> Optional: Container image configuration, which is recommended only in special situations.
 <14> Template customization. Here a pod is scheduled with anti-affinity, so the pod is not scheduled on nodes with the same hostname.
