--- a/documentation/modules/deploying/con-accessing-http-bridge-from-outside.adoc
+++ b/documentation/modules/deploying/con-accessing-http-bridge-from-outside.adoc
@@ -2,17 +2,17 @@
 
 // This assembly is included in the following assemblies:
 //
-// assembly-kafka-bridge-overview.adoc
+// assembly-http-bridge-overview.adoc
 
-[id='con-accessing-kafka-bridge-from-outside-{context}']
+[id='con-accessing-http-bridge-from-outside-{context}']
 
-= Accessing the Kafka Bridge outside of Kubernetes
+= Accessing the HTTP Bridge outside of Kubernetes
 
 [role="_abstract"]
-After deployment, the Kafka Bridge can only be accessed by applications running in the same Kubernetes cluster.
+After deployment, the HTTP Bridge can only be accessed by applications running in the same Kubernetes cluster.
 These applications use the `_<kafka_bridge_name>_-bridge-service` service to access the API.
 
-If you want to make the Kafka Bridge accessible to applications running outside of the Kubernetes cluster, you can expose it manually by creating one of the following features:
+If you want to make the HTTP Bridge accessible to applications running outside of the Kubernetes cluster, you can expose it manually by creating one of the following features:
 
 * `LoadBalancer` or `NodePort` type services
 
@@ -30,4 +30,4 @@ If you decide to create Services, use the labels from the `selector` of the `_<k
     strimzi.io/kind: KafkaBridge
   #...
 ----
-<1> Name of the Kafka Bridge custom resource in your Kubernetes cluster.
+<1> Name of the HTTP Bridge custom resource in your Kubernetes cluster.
